# auth-server

./: Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
migrations/: 0001_init.sql  0003_user_more_ids.sql  0004_fixed_ids.sql  0005_discord_avatar.sql  0006_discord_name.sql  0007_custom_types.sql  0008_added_admin.sql  0009_added_key_to_app.sql
src/: error.rs  jwt.rs  main.rs  state.rs
src/api/: mod.rs
src/api/auth/: discord.rs  mod.rs  steam.rs  steam.rs.orig
src/dashboard/: mod.rs  templates.rs
src/db/: app.rs  user.rs
templates/: app.html  index.html  layout.html  login.html  new_app.html  uri.html
