[package]
name = "sso-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["macros"] }
http = "0.2"
oauth2 = "4.1"
# Use Rustls because it makes it easier to cross-compile on CI
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
rand = "0.8.5"
jsonwebtoken = "8.3"
once_cell = "1.18"
tower-http = { version = "0.4.0", features = ["cors"] }
tower-cookies = "0.9"
cached = "0.44"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
dotenv = "0.15"
